# apollo

./: CMakeLists.txt  README.md
cmake/: FindCUDAToolkit.cmake  FindCUPTI.cmake
docs/: training-data-processing.md
include/apollo/: Apollo.h  Config.h  Env.h  Exec.h  Logging.h  Macros.h  ModelFactory.h  Perf.h  PolicyModel.h  Region.h  TimingModel.h  Trace.h  Util.h  Utils.h
include/util/: Debug.h
src/: Apollo.cpp  CMakeLists.txt  Config.cpp  Env.cpp  Exec.cpp  ModelFactory.cpp  Perf.cpp  Region.cpp  Trace.cpp  Util.cpp  Utils.cpp
src/cuda/: CMakeLists.txt  CudaAsync.cpp
src/models/: DecisionTree.cpp  Random.cpp  RegressionTree.cpp  RoundRobin.cpp  Sequential.cpp  Static.cpp
test/: Makefile  amr_stencil.cpp  amr_stencil_train.cpp  clean.py  daxpy-v2.cpp  daxpy-v3.cpp  daxpy.cpp  gnuplot1.baseline.txt  hasGPU.cpp  makefile  makefile-corona  matrixMultiplication-v2.cpp  matrixMultiplication.cpp  omp_smithW-v8-apollo.cpp  omp_smithW-v8-without-apollo.cpp  omp_smithW-v9-apollo-nEle.cpp  pi-reduction.cpp  processingMeasures.cpp  run-amr-prod.sh  run-amr.sh  run-daxpyv2.sh  run-daxpyv3.sh  run-mm-corona.sh  run-mm.sh  run-smithw-prod.sh  run-smithw-separate.sh  run-smithw-vsample.sh  run-smithw.sh  smithw-omp-cpu.cpp  smithw-omp-offload-v2.cpp  smithw-omp-offload-v3.cpp  smithw-omp-offload.cpp  smithw-serial.cpp
test/reference-output/: dtree-latest-rank-0-daxpy.yaml  log.txt  regtree-latest-rank-0-daxpy.yaml  step-100-rank-0-daxpy-measures.txt
test/smithw_base_results/: smithw-omp-96T-cpu-32-15000-128-corona-mi60.txt  smithw-omp-gpu-32-15000-128-corona-mi60.txt  smithw-serial-32-15000-128-corona-mi60.txt
test/trace-corona-analysis/: Region-Data-rank-0-smith-waterman-measures.txt  trace-RoundRobin-region-smith-waterman-rank-02021-07-27-06:23:21-PDT-0.csv  trace-RoundRobin-region-smith-waterman-rank-02021-07-27-06:23:22-PDT-0.csv  (+214 more)
(+1462 files in other folders)
